--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ section {
 	overflow:hidden;
 	width:128px;
 	height:128px;
-	background:url(/images/icon.png) no-repeat center;
+	background:url(/images/icon_v6.png) no-repeat center;
 	margin:32px auto;
 	background-size:128px 128px;
 }
@@ -60,7 +60,7 @@ section {
     only screen and (min--moz-device-pixel-ratio: 1.5),
     only screen and (min-device-pixel-ratio: 1.5) {
         #identity #icon {
-			background-image:url(/images/icon@2x.png);
+			background-image:url(/images/icon_v6@2x.png);
 		}
 }
 
