Show a pointer over "button"-like links
If the buttons aren’t actually real I’d like to propose to at least show a proper cursor. The caret does not indicate that clickability the button deserves. :P

--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,7 @@ section {
 
 .button {
 	text-decoration:none;
+	cursor: pointer;
 	display:block;
 	border-radius:10px;
 	background-color:#1F1F1F;
